# rk35xx-yolo-demo

./: readme.md
src/yolov8/: CMakeLists.txt  camera_demo.cpp  imagefile_demo.cpp  videofile_demo.cpp
src/yolov8/model/: .gitignore
src/yolov8/res/: NPUCamDet.desktop
src/yolov8/res/rk3576/: NPUCamDet.desktop
